Parte inicial do projeto concluida! - 2025-02-11

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/e0b8a276c3.js" crossorigin="anonymous"></script>   
     <link rel="stylesheet" href="style.css">
     <title>Jukebox</title>
 </head>
@@ -10,5 +11,28 @@
     <div id="mensagem">
         <h1>Aplique médidas de smartphones ou tablets</h1>
     </div>
+
+    <div id="jukebox">
+        <!-- inicio da div principal jukebox -->
+         <div id="inicioJukebox">
+            <div id="logoInicio">
+                <div id="circuloVermelho"></div>
+                <div> <p>Music</p> </div>
+            </div>
+            <div id="iconesInicio">
+                <div class="icon">
+                    <i class="fa-regular fa-bell"></i>
+                </div>
+                <div class="icon"> 
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </div>
+                <div class="icon">
+                    <i class="fa-regular fa-circle-user"></i>
+                </div>
+            </div>
+         </div> <!--fim da div INICIOJUKEBOX-->
+         <!-- fim da div principal jukebox -->
+    </div>
+
 </body>
 </html>
