opcoes de audio foram implementadas - 2025-02-11

--- a/index.html
+++ b/index.html
@@ -31,6 +31,30 @@
                 </div>
             </div>
          </div> <!--fim da div INICIOJUKEBOX-->
+
+         <div id="opcoesDeAudio">
+            <div class="opcao">
+                <p>Podcast</p>
+            </div>
+            <div class="opcao">
+                <p>Festa</p>
+            </div>
+            <div class="opcao">
+                <p>Para treinar</p>
+            </div>
+            <div class="opcao">
+                <p>Energia</p>
+            </div>
+            <div class="opcao">
+                <p>Romance</p>
+            </div>
+            <div class="opcao">
+                <p>Relax</p>
+            </div>
+            <div class="opcao">
+                <p>Ouvir no trânsito</p>
+            </div>
+         </div>
          <!-- fim da div principal jukebox -->
     </div>
 
