div's para foto da capa de projetos de artistas  adicionadas - 2025-02-12

--- a/index.html
+++ b/index.html
@@ -54,7 +54,44 @@
             <div class="opcao">
                 <p>Ouvir no trânsito</p>
             </div>
-         </div>
+         </div> <!-- fim da div OPCOESDEAUDIO-->
+
+         <div id="usuarioFoto">
+            <div id="foto"></div>
+            <div id="nomeJukebox">
+                <p>Lucas</p>
+                <h3>Jukebox Digital</h3>
+            </div>
+         </div> <!-- fim da div USUARIOFOTO-->
+
+         <div id="quadroMusicas">
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+            <div class="musicaImg"></div>
+         </div> <!-- fim da div QUADROMUSICAS-->
+
+        <div id="lancamentoSeta">
+            <p>Lançamentos</p>
+            <span> > </span>
+        </div> <!-- fim da div LANCAMENTOSETA-->
+
+         <div id="novosProjetos">
+            <div class="capaProjeto"></div>
+            <div class="capaProjeto"></div>
+            <div class="capaProjeto"></div>
+            <div class="capaProjeto"></div>
+            <div class="capaProjeto"></div>
+            <div class="capaProjeto"></div>
+            <div class="capaProjeto"></div>
+        </div> <!--fim da div NOVOSPROJETOS-->
+
+        
          <!-- fim da div principal jukebox -->
     </div>
 
